# PyViz3D

./: .gitignore  404.html  LICENSE  MANIFEST.in  README.md  blender.py  index.html  mkdocs.yml  pyproject.toml  search.html  setup.py  sitemap.xml
.github/workflows/: python-package.yml
changelog/: index.html
contributing/: index.html
distribution/: index.html
docs/: changelog.md  contributing.md  distribution.md  index.md
docs/img/: pyviz3d-logo.key
examples/: example.py  example_arrows.py  example_blender.py  example_bounding_boxes.py  example_graph.py  example_instance.py  example_meshes.py  example_normals.py  example_point_cloud.py  example_point_clouds.py  example_polyline.py  example_polylines.py  example_spline_camera_trajectory.py  example_superquadric.py  example_superquadrics.py  example_text.py  example_volumetrics.py
examples/data/: 01_OfficeLab_01_F1_floorplan.txt  horse.npy  lamp_superquadrics.npz  scene0451_01.npy
img/: pyviz3d-logo.graffle
pyviz3d/: __init__.py  arrow.py  blender_config.py  camera.py  circles_2d.py  cuboid.py  interactor.py  labels.py  lines.py  mesh.py  motion.py  pointcloud.py  points.py  polyline.py  superquadric.py  visualizer.py  viusalizer.py
pyviz3d/src/: blender_tools.py  index.html
pyviz3d/src/js/: scene.js
sample/: index.html  nodes.json
sample/js/: scene.js
search/: search_index.json
